--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<dependency>
 		  <groupId>com.google.guava</groupId>
 		  <artifactId>guava</artifactId>
-            <version>r09</version>
+            <version>10.0.1</version>
             <scope>test</scope>
 		</dependency>
 		<dependency>
