--- a/pom.xml
+++ b/pom.xml
@@ -17,16 +17,16 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-		  <groupId>com.google.guava</groupId>
-		  <artifactId>guava</artifactId>
-            <version>10.0.1</version>
-            <scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.jmock</groupId>
 			<artifactId>jmock</artifactId>
 			<version>2.5.0</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+		  <groupId>com.google.guava</groupId>
+		  <artifactId>guava</artifactId>
+            	  <version>11.0.1</version>
+            	  <scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
