--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.8</version>
+	        <configuration>
+        	  <links>
+	            <link>http://docs.jboss.org/hibernate/core/4.0/javadocs/</link>
+		    <link>http://static.springsource.org/spring/docs/3.0.x/javadoc-api/</link>
+		    <link>http://guava-libraries.googlecode.com/svn/trunk/javadoc/</link>
+	          </links>
+                  <encoding>UTF-8</encoding>
+	        </configuration>
 
             </plugin>
             <!--
