--- a/pom.xml
+++ b/pom.xml
@@ -238,7 +238,7 @@
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-site-plugin</artifactId>
-              <version>3.0-beta-1</version>
+              <version>3.0</version>
             </plugin>
           </plugins>
         </pluginManagement>
