--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.bin2</groupId>
     <artifactId>jag-dao</artifactId>
     <packaging>jar</packaging>
-    <version>0.10-SNAPSHOT</version>
+    <version>0.10</version>
     <name>jag-dao</name>
     <url>http://code.google.com/p/jag-dao/</url>
     <properties>
@@ -144,9 +143,9 @@
         </notifiers>
     </ciManagement>
     <scm>
-        <connection>scm:svn:http://jag-dao.googlecode.com/svn/tags/jag-dao-0.10</connection>
-        <developerConnection>scm:svn:https://jag-dao.googlecode.com/svn/tags/jag-dao-0.10</developerConnection>
-        <url>http://jag-dao.googlecode.com/svn/tags/jag-dao-0.10</url>
+        <connection>scm:svn:http://jag-dao.googlecode.com/svn/tags/0.10</connection>
+        <developerConnection>scm:svn:https://jag-dao.googlecode.com/svn/tags/0.10</developerConnection>
+        <url>http://jag-dao.googlecode.com/svn/tags/0.10</url>
     </scm>
 
 
