upgrade spring version and migrate to hibernate 4

--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,13 @@
     <name>jag-dao</name>
     <url>http://code.google.com/p/jag-dao/</url>
     <properties>
-        <spring.version>3.0.5.RELEASE</spring.version>
+        <spring.version>3.1.1.RELEASE</spring.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>6.0.1</version>
+            <version>6.5.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -25,19 +25,19 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>11.0.1</version>
+            <version>13.0-rc1</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>3.6.5.Final</version>
+            <version>4.1.4.Final</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.6.1</version>
+            <version>1.6.6</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -52,6 +52,12 @@
             <version>${spring.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>${project.name}</finalName>
@@ -70,10 +76,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.0.2</version>
+                <version>2.5.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
@@ -97,7 +103,7 @@
 
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.8</version>
+                <version>2.8.1</version>
 	        <configuration>
         	  <links>
 	            <link>http://docs.jboss.org/hibernate/core/4.0/javadocs/</link>
@@ -121,7 +127,7 @@
                     <sourceEncoding>UTF-8</sourceEncoding>
                     <targetJdk>1.6</targetJdk>
                 </configuration>
-                <version>2.5</version>
+                <version>2.7.1</version>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
