--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>org.bin2</groupId>
     <artifactId>jag-dao</artifactId>
     <packaging>jar</packaging>
-    <version>0.11</version>
+    <version>0.12-SNAPSHOT</version>
     <name>jag-dao</name>
     <url>http://code.google.com/p/jag-dao/</url>
     <properties>
@@ -149,9 +149,9 @@
         </notifiers>
     </ciManagement>
     <scm>
-        <connection>scm:svn:http://jag-dao.googlecode.com/svn/tags/0.11</connection>
-        <developerConnection>scm:svn:https://jag-dao.googlecode.com/svn/tags/0.11</developerConnection>
-        <url>http://jag-dao.googlecode.com/svn/tags/0.11</url>
+        <connection>scm:svn:http://jag-dao.googlecode.com/svn/tags/jag-dao-0.10</connection>
+        <developerConnection>scm:svn:https://jag-dao.googlecode.com/svn/tags/jag-dao-0.10</developerConnection>
+        <url>http://jag-dao.googlecode.com/svn/tags/jag-dao-0.10</url>
     </scm>
 
 
