--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <url>http://code.google.com/p/jag-dao/</url>
     <properties>
         <spring.version>3.1.1.RELEASE</spring.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
         <dependency>
