--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <name>jag-dao</name>
     <url>http://code.google.com/p/jag-dao/</url>
     <properties>
-        <spring.version>3.1.1.RELEASE</spring.version>
+        <spring.version>4.0.0.RELEASE</spring.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
@@ -42,6 +42,12 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>2.3.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
             <version>${spring.version}</version>
@@ -49,7 +55,19 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
+            <version>${spring.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
             <scope>compile</scope>
         </dependency>
@@ -58,7 +76,11 @@
             <artifactId>jsr305</artifactId>
             <version>2.0.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.arnaudroger</groupId>
+            <artifactId>simpleFlatMapper</artifactId>
+            <version>0.3-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${project.name}</finalName>
