--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
         <dependency>
             <groupId>com.github.arnaudroger</groupId>
             <artifactId>simpleFlatMapper</artifactId>
-            <version>0.3-SNAPSHOT</version>
+            <version>0.2</version>
         </dependency>
     </dependencies>
     <build>
