--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.bin2</groupId>
+    <groupId>org.bin2.jag-dao</groupId>
     <artifactId>jag-dao</artifactId>
     <packaging>jar</packaging>
     <version>0.13-SNAPSHOT</version>
     <name>jag-dao</name>
-    <url>http://code.google.com/p/jag-dao/</url>
+    <url>https://github.com/binig/jag-dao</url>
     <properties>
         <spring.version>3.1.1.RELEASE</spring.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -137,46 +137,24 @@
             </plugin>
         </plugins>
     </reporting>
-    <ciManagement>
-        <system>jenkins</system>
-	<url>http://bin2.org/jenkins</url>
-        <notifiers>
-            <notifier>
-                <type>mail</type>
-                <configuration>
-                    <address>scm@bin2.org</address>
-                </configuration>
-            </notifier>
-        </notifiers>
-    </ciManagement>
+
     <scm>
-        <connection>scm:svn:http://jag-dao.googlecode.com/svn/tags/jag-dao-0.10</connection>
-        <developerConnection>scm:svn:https://jag-dao.googlecode.com/svn/tags/jag-dao-0.10</developerConnection>
-        <url>http://jag-dao.googlecode.com/svn/tags/jag-dao-0.10</url>
+        <url>https://github.com/binig/jag-dao</url>
+        <connection>scm:git:https://github.com/binig/jag-dao.git</connection>
+        <developerConnection>scm:git:git@github.com:binig/jag-dao.git</developerConnection>
     </scm>
 
-
     <distributionManagement>
-        <repository>
-            <uniqueVersion>false</uniqueVersion>
-            <id>bin2Repo</id>
-            <name>bin2 repository</name>
-            <url>dav:http://bin2.org/archiva/repository/publicRelease</url>
-            <layout>default</layout>
-        </repository>
         <snapshotRepository>
-            <uniqueVersion>false</uniqueVersion>
-            <id>bin2Snap</id>
-            <name>bin2 repository snapshot</name>
-            <url>dav:http://bin2.org/archiva/repository/snapshots</url>
-
-            <layout>default</layout>
+            <id>sonatype-nexus-snapshots</id>
+            <name>Sonatype Nexus snapshot repository</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
-        <site>
-            <id>bin2Site</id>
-            <name>Bin2 sites</name>
-            <url>dav:http://site.maven.bin2.org/${project.groupId}/${project.artifactId}</url>
-        </site>
+        <repository>
+            <id>sonatype-nexus-staging</id>
+            <name>Sonatype Nexus release repository</name>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
     </distributionManagement>
 
     <pluginRepositories>
@@ -191,17 +169,19 @@
               <layout>default</layout> </pluginRepository -->
     </pluginRepositories>
 
-	<licenses>
-	  <license>
-	    <name>Apache 2</name>
-	    <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-	    <distribution>repo</distribution>
-	    <comments>A business-friendly OSS license</comments>
-	  </license>
-	</licenses>
+
+    <licenses>
+        <license>
+            <name>The MIT License (MIT)</name>
+            <url>http://opensource.org/licenses/MIT</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+
     <organization>
         <name>bin2.org</name>
-        <url>http://bin2.org</url>
+        <url>https://github.com/binig/</url>
     </organization>
     <developers>
         <developer>
@@ -222,13 +202,7 @@
               <organization></organization> <organizationUrl /> <roles>
               <role>Graphics</role> </roles> <timezone>+1</timezone> </contributor -->
     </contributors>
-    <repositories>
-        <repository>
-            <id>repository.jboss.org-public</id>
-            <name>JBoss repository</name>
-            <url>https://repository.jboss.org/nexus/content/groups/public</url>
-        </repository>
-    </repositories>
+
 <profiles>
     <profile>
       <id>maven-3</id>
