--- a/pom.xml
+++ b/pom.xml
@@ -62,18 +62,7 @@
     </dependencies>
     <build>
         <finalName>${project.name}</finalName>
-        <extensions>
-            <extension>
-                <groupId>org.apache.maven.wagon</groupId>
-                <artifactId>wagon-webdav</artifactId>
-                <!--<version>1.0-beta-2</version>-->
-            </extension>
-        </extensions>
         <plugins>
-            <!--
-                   plugin> <artifactId>maven-surefire-plugin</artifactId>
-                   <version>2.4-collab-SNAPSHOT</version> <configuration>
-                   <groups>unit</groups> </configuration> </plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -84,59 +73,62 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
-            <!--
-                   <plugin> <groupId>org.codehaus.mojo</groupId>
-                   <artifactId>tomcat-maven-plugin</artifactId> <configuration>
-                   <server>tomcat</server> </configuration> </plugin>
-               -->
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.2.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.5</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.3</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>false</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
 
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>jdepend-maven-plugin</artifactId>
-                <version>2.0-beta-2</version>
-            </plugin>
-            <plugin>
-
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.8.1</version>
-	        <configuration>
-        	  <links>
-	            <link>http://docs.jboss.org/hibernate/core/4.0/javadocs/</link>
-		    <link>http://static.springsource.org/spring/docs/3.0.x/javadoc-api/</link>
-		    <link>http://guava-libraries.googlecode.com/svn/trunk/javadoc/</link>
-	          </links>
-                  <encoding>UTF-8</encoding>
-	        </configuration>
-
-            </plugin>
-            <!--
-                plugin> <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId> <configuration>
-                <configLocation>src/main/checkstyle/checkstyle.xml</configLocation>
-                <propertyExpansion>basedir=.</propertyExpansion> </configuration>
-                </plugin -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-pmd-plugin</artifactId>
-                <configuration>
-                    <sourceEncoding>UTF-8</sourceEncoding>
-                    <targetJdk>1.6</targetJdk>
-                </configuration>
-                <version>2.7.1</version>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.5.1</version>
-            </plugin>
-        </plugins>
-    </reporting>
 
     <scm>
         <url>https://github.com/binig/jag-dao</url>
@@ -157,17 +149,6 @@
         </repository>
     </distributionManagement>
 
-    <pluginRepositories>
-        <!--
-              pluginRepository> <releases> <enabled>false</enabled>
-              <updatePolicy>always</updatePolicy>
-              <checksumPolicy>warn</checksumPolicy> </releases> <snapshots>
-              <enabled>true</enabled> <updatePolicy>never</updatePolicy>
-              <checksumPolicy>fail</checksumPolicy> </snapshots>
-              <id>apacheSnapshots</id> <name>apache Snapshots</name>
-              <url>http://people.apache.org/repo/m2-snapshot-repository/</url>
-              <layout>default</layout> </pluginRepository -->
-    </pluginRepositories>
 
 
     <licenses>
