--- a/pom.xml
+++ b/pom.xml
@@ -103,9 +103,6 @@
                         </goals>
                     </execution>
                 </executions>
-	        <configuration>
-	            <additionalparam>-Xdoclint:none</additionalparam>
-	        </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -237,43 +234,70 @@
         </plugins>
       </build>
     </profile>
-                <profile>
-                        <id>travis</id>
-                        <activation>
-                                <property>
-                                        <name>env.TRAVIS</name>
-                                        <value>true</value>
-                                </property>
-                        </activation>
-                        <build>
-                                <plugins>
-                                        <plugin>
-                                                <groupId>org.eluder.coveralls</groupId>
-                                                <artifactId>coveralls-maven-plugin</artifactId>
-                                                <version>2.2.0</version>
-                                        </plugin>
-                                        <plugin>
-                                                <groupId>org.jacoco</groupId>
-                                                <artifactId>jacoco-maven-plugin</artifactId>
-                                                <version>0.7.1.201405082137</version>
-                                                <executions>
-                                                        <execution>
-                                                                <id>jacoco-initialize</id>
-                                                                <goals>
-                                                                        <goal>prepare-agent</goal>
-                                                                </goals>
-                                                        </execution>
-                                                        <execution>
-                                                                <id>jacoco-site</id>
-                                                                <phase>package</phase>
-                                                                <goals>
-                                                                        <goal>report</goal>
-                                                                </goals>
-                                                        </execution>
-                                                </executions>
-                                        </plugin>
-                                </plugins>
-                        </build>
-                </profile>
+    <profile>
+        <id>j8Javadoc</id>
+        <activation>
+            <jdk>1.8</jdk>
+        </activation>
+        <build>
+
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <additionalparam>-Xdoclint:none</additionalparam>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    </profile>
+    <profile>
+            <id>travis</id>
+            <activation>
+                    <property>
+                            <name>env.TRAVIS</name>
+                            <value>true</value>
+                    </property>
+            </activation>
+            <build>
+                    <plugins>
+                            <plugin>
+                                    <groupId>org.eluder.coveralls</groupId>
+                                    <artifactId>coveralls-maven-plugin</artifactId>
+                                    <version>2.2.0</version>
+                            </plugin>
+                            <plugin>
+                                    <groupId>org.jacoco</groupId>
+                                    <artifactId>jacoco-maven-plugin</artifactId>
+                                    <version>0.7.1.201405082137</version>
+                                    <executions>
+                                            <execution>
+                                                    <id>jacoco-initialize</id>
+                                                    <goals>
+                                                            <goal>prepare-agent</goal>
+                                                    </goals>
+                                            </execution>
+                                            <execution>
+                                                    <id>jacoco-site</id>
+                                                    <phase>package</phase>
+                                                    <goals>
+                                                            <goal>report</goal>
+                                                    </goals>
+                                            </execution>
+                                    </executions>
+                            </plugin>
+                    </plugins>
+            </build>
+    </profile>
   </profiles>
 </project>
