--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: java
 
 jdk:
   - oraclejdk7
+script : mvn install -DskipTests=true -P !signature
 
 after_success:
   - mvn -P travis jacoco:report coveralls:jacoco
